test/errors/parsing/controlFlow.compopts
--detailed-errors # controlFlow-detailed.good
--no-detailed-errors # controlFlow-brief.good
